Full JPMS support and use gradle Kotlin DSL